--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -189,7 +189,7 @@
         "no-throw-literal": "error",
         "no-undef-init": "error",
         "no-undef": "off",
-        "no-undefined": "error",
+        "no-undefined": "off",
         "no-underscore-dangle": "off",
         "no-unmodified-loop-condition": "error",
         "no-unneeded-ternary": "error",
