--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,26 +1,29 @@
 {
+    "root": true,
     "env": {
         "browser": true,
-        "node": true,
         "commonjs": true,
-        "es6": true
+        "es2020": true,
+        "node": true
     },
     "extends": "eslint:recommended",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 11
     },
     "rules": {
         "accessor-pairs": "error",
         "array-bracket-newline": "error",
-        "array-bracket-spacing": ["error", "never"],
+        "array-bracket-spacing": [
+            "error",
+            "never"
+        ],
         "array-callback-return": "error",
         "array-element-newline": "off",
         "arrow-body-style": "off",
-        "arrow-parens": ["error", "as-needed"],
+        "arrow-parens": [
+            "error",
+            "as-needed"
+        ],
         "arrow-spacing": [
             "error",
             {
@@ -29,7 +32,10 @@
             }
         ],
         "block-scoped-var": "error",
-        "block-spacing": ["error", "always"],
+        "block-spacing": [
+            "error",
+            "always"
+        ],
         "brace-style": [
             "error",
             "1tbs",
@@ -38,10 +44,10 @@
             }
         ],
         "callback-return": "off",
-        "camelcase": "off",
+        "camelcase": "error",
         "capitalized-comments": "off",
         "class-methods-use-this": "error",
-        "comma-dangle": ["error", "never"],
+        "comma-dangle": "error",
         "comma-spacing": [
             "error",
             {
@@ -49,14 +55,25 @@
                 "before": false
             }
         ],
-        "comma-style": ["error", "last"],
+        "comma-style": [
+            "error",
+            "last"
+        ],
         "complexity": "error",
-        "computed-property-spacing": ["error", "never"],
+        "computed-property-spacing": [
+            "error",
+            "never"
+        ],
         "consistent-return": "error",
         "consistent-this": "error",
         "curly": "off",
         "default-case": "error",
-        "dot-location": ["error", "property"],
+        "default-case-last": "error",
+        "default-param-last": "error",
+        "dot-location": [
+            "error",
+            "property"
+        ],
         "dot-notation": [
             "error",
             {
@@ -68,19 +85,31 @@
         "func-call-spacing": "error",
         "func-name-matching": "error",
         "func-names": "error",
-        "func-style": ["error", "expression"],
+        "func-style": [
+            "error",
+            "expression"
+        ],
+        "function-call-argument-newline": [
+            "error",
+            "consistent"
+        ],
         "function-paren-newline": "error",
         "generator-star-spacing": "error",
         "global-require": "off",
+        "grouped-accessor-pairs": "error",
         "guard-for-in": "error",
         "handle-callback-err": "error",
         "id-blacklist": "error",
+        "id-denylist": "error",
         "id-length": "off",
         "id-match": "error",
-        "implicit-arrow-linebreak": ["error", "beside"],
+        "implicit-arrow-linebreak": [
+            "error",
+            "beside"
+        ],
         "indent": "error",
         "indent-legacy": "error",
-        "init-declarations": "off",
+        "init-declarations": "error",
         "jsx-quotes": "error",
         "key-spacing": "error",
         "keyword-spacing": [
@@ -90,9 +119,12 @@
                 "before": true
             }
         ],
-        "line-comment-position": "off",
-        "linebreak-style": ["error", "unix"],
-        "lines-around-comment": "off",
+        "line-comment-position": "error",
+        "linebreak-style": [
+            "error",
+            "unix"
+        ],
+        "lines-around-comment": "error",
         "lines-around-directive": "error",
         "lines-between-class-members": "error",
         "max-classes-per-file": "error",
@@ -101,10 +133,10 @@
         "max-lines": "error",
         "max-lines-per-function": "off",
         "max-nested-callbacks": "error",
-        "max-params": "off",
+        "max-params": "error",
         "max-statements": "off",
         "max-statements-per-line": "off",
-        "multiline-comment-style": ["off"],
+        "multiline-comment-style": "off",
         "new-cap": "error",
         "new-parens": "error",
         "newline-after-var": "off",
@@ -117,8 +149,9 @@
         "no-buffer-constructor": "error",
         "no-caller": "error",
         "no-catch-shadow": "error",
-        "no-confusing-arrow": "off",
-        "no-console": "off",
+        "no-confusing-arrow": "error",
+        "no-console": "error",
+        "no-constructor-return": "error",
         "no-continue": "error",
         "no-div-regex": "error",
         "no-duplicate-imports": "error",
@@ -132,9 +165,9 @@
         "no-extra-parens": "off",
         "no-floating-decimal": "error",
         "no-implicit-coercion": "error",
-        "no-implicit-globals": "off",
+        "no-implicit-globals": "error",
         "no-implied-eval": "error",
-        "no-inline-comments": "off",
+        "no-inline-comments": "error",
         "no-invalid-this": "error",
         "no-iterator": "error",
         "no-label-var": "error",
@@ -142,13 +175,14 @@
         "no-lone-blocks": "error",
         "no-lonely-if": "error",
         "no-loop-func": "error",
+        "no-loss-of-precision": "error",
         "no-magic-numbers": "off",
         "no-mixed-operators": "error",
         "no-mixed-requires": "error",
         "no-multi-assign": "off",
         "no-multi-spaces": "error",
         "no-multi-str": "error",
-        "no-multiple-empty-lines": "off",
+        "no-multiple-empty-lines": "error",
         "no-native-reassign": "error",
         "no-negated-condition": "error",
         "no-negated-in-lhs": "error",
@@ -164,36 +198,36 @@
         "no-plusplus": "off",
         "no-process-env": "error",
         "no-process-exit": "error",
+        "no-promise-executor-return": "error",
         "no-proto": "error",
+        "no-restricted-exports": "error",
         "no-restricted-globals": "error",
         "no-restricted-imports": "error",
         "no-restricted-modules": "error",
         "no-restricted-properties": "error",
         "no-restricted-syntax": "error",
-        "no-return-assign": "off",
+        "no-return-assign": "error",
         "no-return-await": "error",
         "no-script-url": "error",
         "no-self-compare": "error",
         "no-sequences": "error",
         "no-shadow": "off",
         "no-spaced-func": "error",
-        "no-sync": [
-            "error",
-            {
-                "allowAtRootLevel": true
-            }
-        ],
+        "no-sync": "error",
         "no-tabs": "error",
         "no-template-curly-in-string": "error",
         "no-ternary": "off",
         "no-throw-literal": "error",
+        "no-trailing-spaces": "off",
         "no-undef-init": "error",
-        "no-undef": "off",
         "no-undefined": "off",
-        "no-underscore-dangle": "off",
+        "no-underscore-dangle": "error",
         "no-unmodified-loop-condition": "error",
         "no-unneeded-ternary": "error",
+        "no-unreachable-loop": "error",
+        "no-unused-expressions": "error",
         "no-use-before-define": "off",
+        "no-useless-backreference": "error",
         "no-useless-call": "error",
         "no-useless-computed-key": "error",
         "no-useless-concat": "error",
@@ -206,7 +240,10 @@
         "no-whitespace-before-property": "error",
         "nonblock-statement-body-position": "error",
         "object-curly-newline": "error",
-        "object-curly-spacing": ["error", "always"],
+        "object-curly-spacing": [
+            "error",
+            "always"
+        ],
         "object-shorthand": "error",
         "one-var": "off",
         "one-var-declaration-per-line": "error",
@@ -217,22 +254,34 @@
         "prefer-arrow-callback": "error",
         "prefer-const": "error",
         "prefer-destructuring": "error",
+        "prefer-exponentiation-operator": "error",
         "prefer-named-capture-group": "off",
         "prefer-numeric-literals": "error",
         "prefer-object-spread": "error",
         "prefer-promise-reject-errors": "error",
         "prefer-reflect": "off",
+        "prefer-regex-literals": "error",
         "prefer-rest-params": "error",
         "prefer-spread": "error",
         "prefer-template": "off",
         "quote-props": "off",
-        "quotes": ["error", "single"],
-        "radix": ["error", "as-needed"],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "radix": [
+            "error",
+            "as-needed"
+        ],
+        "require-atomic-updates": "error",
         "require-await": "error",
         "require-jsdoc": "error",
         "require-unicode-regexp": "off",
-        "rest-spread-spacing": ["error", "never"],
-        "semi": ["error", "always"],
+        "rest-spread-spacing": [
+            "error",
+            "never"
+        ],
+        "semi": "error",
         "semi-spacing": [
             "error",
             {
@@ -240,27 +289,48 @@
                 "before": false
             }
         ],
-        "semi-style": ["error", "last"],
+        "semi-style": [
+            "error",
+            "last"
+        ],
         "sort-imports": "error",
         "sort-keys": "off",
         "sort-vars": "error",
         "space-before-blocks": "error",
         "space-before-function-paren": "error",
-        "space-in-parens": ["error", "never"],
+        "space-in-parens": [
+            "error",
+            "never"
+        ],
         "space-infix-ops": "error",
         "space-unary-ops": "error",
-        "spaced-comment": "off",
-        "strict": ["error", "never"],
+        "spaced-comment": [
+            "error",
+            "always"
+        ],
+        "strict": [
+            "error",
+            "never"
+        ],
         "switch-colon-spacing": "error",
         "symbol-description": "error",
-        "template-curly-spacing": ["error", "never"],
+        "template-curly-spacing": [
+            "error",
+            "never"
+        ],
         "template-tag-spacing": "error",
-        "unicode-bom": ["error", "never"],
+        "unicode-bom": [
+            "error",
+            "never"
+        ],
         "valid-jsdoc": "error",
         "vars-on-top": "error",
         "wrap-iife": "error",
         "wrap-regex": "error",
         "yield-star-spacing": "error",
-        "yoda": ["error", "never"]
+        "yoda": [
+            "error",
+            "never"
+        ]
     }
 }
