--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -18,5 +18,6 @@
     "javascript.preferences.useAliasesForRenames": false,
     "editor.minimap.enabled": false,
     "todo-tree.tree.showScanModeButton": false,
-    "sync.gist": "c3153764cd06269e900fb65fe397475a"
+    "sync.gist": "c3153764cd06269e900fb65fe397475a",
+    "javascript.suggest.autoImports": false
 }
