--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -21,8 +21,8 @@
     "javascript.suggest.autoImports": false,
     "editor.columnSelection": false,
     "explorer.autoReveal": "focusNoScroll",
-    "editor.quickSuggestions": false,
-    "editor.parameterHints.enabled": false,
+    "_editor.quickSuggestions": false,
+    "_editor.parameterHints.enabled": false,
     "editor.suggestOnTriggerCharacters": false,
     "editor.hover.enabled": false,
 }
