--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -20,9 +20,10 @@
     "sync.gist": "c3153764cd06269e900fb65fe397475a",
     "javascript.suggest.autoImports": false,
     "editor.columnSelection": false,
-    "explorer.autoReveal": "focusNoScroll",
+    "_explorer.autoReveal": "focusNoScroll",
+    "explorer.autoReveal": true,
     "_editor.quickSuggestions": false,
-    "_editor.parameterHints.enabled": false,
+    "editor.parameterHints.enabled": false,
     "editor.suggestOnTriggerCharacters": false,
     "editor.hover.enabled": false,
     "workbench.editor.enablePreview": false,
