--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -40,4 +40,5 @@
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
+    "security.workspace.trust.untrustedFiles": "open"
 }
