--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -40,5 +40,6 @@
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
-    "security.workspace.trust.untrustedFiles": "open"
+    "security.workspace.trust.untrustedFiles": "open",
+    "json.schemas": []
 }
