--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -22,6 +22,11 @@
     "editor.minimap.enabled": false,
     "editor.parameterHints": false,
     "editor.parameterHints.enabled": false,
+    "editor.quickSuggestions": {
+        "other": "inline",
+        "comments": "inline",
+        "strings": "inline"
+    },
     "editor.snippetSuggestions": "top",
     "editor.suggest.preview": true,
     "editor.suggest.showMethods": true,
