--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -5,6 +5,7 @@
     "[json]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
+    "aws.profile": "profile:matthewriley",
     "diffEditor.ignoreTrimWhitespace": false,
     "editor.acceptSuggestionOnEnter": "on",
     "editor.autoClosingBrackets": "never",
