--- a/src/vscode-settings.json
+++ b/src/vscode-settings.json
@@ -1,4 +1,7 @@
 {
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
